Web stuff and fixes

--- a/microsat-finder/application/templates/confirmation-page.html
+++ b/microsat-finder/application/templates/confirmation-page.html
@@ -20,7 +20,7 @@
                     value="Cancel">Cancel
             </button>
         </form>
-        <form action="/">
+        <form action="/confirm/submit">
             <button type="submit" class="btn btn-secondary font-weight-light" style="background-color: black"
                     value="Confirm<">Confirm
             </button>
