--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -2,10 +2,11 @@
 {% block title %} Home page {% endblock %}
 
 {% block content %}
-
+<p class="error error--hidden">
 <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
 
     <h1>Microsatellite Finder</h1>
+
     <p class="container font-weight-light "> Microsatellites (also known as Simple Sequence Repeats (SSRs)) are
         repetitive sections of DNA that repeat throughout the genome. Microsatellites are important for bioinformatics
         because they can be used to advance our understanding of biological systems, genetic diversity, and evolutionary
@@ -46,6 +47,7 @@
                 </div>
             </div>
         </div>
+
         <a class="btn btn-dark font-weight-light" href="https://github.com/raeKhan225/Finding-Repetition-in-Genomes"
            role="button" style="background-color: black" aria-pressed="true">View Documentation (GitHub)</a>
     </div>
