--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -2,8 +2,9 @@
 {% block title %} Home page {% endblock %}
 
 {% block content %}
-<p class="error error--hidden">
-<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
+
+<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
+     xmlns="http://www.w3.org/1999/html">
 
     <h1>Microsatellite Finder</h1>
 
@@ -14,36 +15,40 @@
         populations, including those that may be important for human health or that are associated with diseases. Most
         commonly, Microsatellites are considered to be between 2 and 7 bases long.</p>
 
-    <div class="button-box ">
+    <div class="button-box">
+
         <a class="btn btn-dark font-weight-light" href="/upload" role="button" style="background-color: black"
            aria-pressed="true">Upload FASTA file</a>
 
-        <button type="button" class="btn btn-dark" data-toggle="modal" style="background-color: black"
-                data-target=".progress-modal-lg">
+        <button type="button" onclick="current_jobs_func()" id="current-jobs-btn"class="btn btn-info btn-dark" style="background-color: black">
             View Current Jobs
         </button>
 
-        <div class="modal fade progress-modal-lg" id="progress-modal" tabindex="-1" role="dialog"
-             aria-hidden="true">
-            <div class="modal-dialog" role="document">
+        <div class="modal show" style="block" id="current-jobs-modal" tabindex="-1" role="dialog">
+
+            <div class="modal-dialog">
+
                 <div class="modal-content">
+
                     <div class="modal-header">
-                        <h5 class="modal-title " id="progress-modal-label">Progress of Current Jobs</h5>
+                        <h5 class="modal-title" >Progress of Current Jobs</h5>
                     </div>
+
                     <div class="modal-body">
                         <p class="container font-weight-light "> Please enter the email address that you used
                             to submit your current jobs, once submitted an email will be sent to this account listing
                             the current
                             jobs associated with the entered email address. </p>
-                        <form action="/viewCurrentJobs/" method="POST">
+                        <form name="view_current_jobs" method="POST">
                             <div class="form-group">
                                 <input type="email" class="form-control" id="inputEmail"
                                        aria-describedby="emailHelp" placeholder="Enter email">
                             </div>
-                            <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-dark">Submit</button>
+                            <input type="button" onclick="close_modal()" class="btn btn-secondary " value="close"/>
+                            <input type="submit" class="btn btn-dark" value="Submit"/>
                         </form>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -51,6 +56,7 @@
         <a class="btn btn-dark font-weight-light" href="https://github.com/raeKhan225/Finding-Repetition-in-Genomes"
            role="button" style="background-color: black" aria-pressed="true">View Documentation (GitHub)</a>
     </div>
+
 
     <div class="container py-5">
         <h2>Download</h2>
@@ -82,5 +88,7 @@
 
 </div>
 
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/scripts.js"></script>
 
 {% endblock %}
