--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -24,7 +24,7 @@
             View Current Jobs
         </button>
 
-        <div class="modal" style="block" id="current-jobs-modal" tabindex="-1" role="dialog">
+        <div class="modal" style="block" id="current-jobs-modal" >
 
             <div class="modal-dialog">
 
@@ -39,7 +39,8 @@
                             to submit your current jobs, once submitted an email will be sent to this account listing
                             the current
                             jobs associated with the entered email address. </p>
-                        <form name="view_current_jobs" method="POST">
+
+                        <form  id="view_current_jobs" method="POST" onsubmit="get_current_jobs_form()">
                             <div class="form-group">
                                 <input type="email" name="inputcurrjobsEmail" class="form-control" id="inputcurrjobsEmail"
                                         placeholder="Enter email">
@@ -47,6 +48,7 @@
                             <input type="button" onclick="close_modal()" class="btn btn-secondary " value="close"/>
                             <input type="submit" class="btn btn-dark" value="Submit"/>
                         </form>
+
                     </div>
 
                 </div>
