--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -24,14 +24,14 @@
             View Current Jobs
         </button>
 
-        <div class="modal" style="block" id="current-jobs-modal" >
+        <div class="modal" style="block" id="current-jobs-modal"  >
 
             <div class="modal-dialog">
 
                 <div class="modal-content">
 
                     <div class="modal-header">
-                        <h5 class="modal-title" >Progress of Current Jobs</h5>
+                        <h5 class="modal-title"> Progress of Current Jobs </h5>
                     </div>
 
                     <div class="modal-body">
@@ -40,13 +40,13 @@
                             the current
                             jobs associated with the entered email address. </p>
 
-                        <form  id="view_current_jobs" method="POST" onsubmit="get_current_jobs_form()">
+                        <form  name="view_current_jobs" id="view_current_jobs"  >
                             <div class="form-group">
                                 <input type="email" name="inputcurrjobsEmail" class="form-control" id="inputcurrjobsEmail"
-                                        placeholder="Enter email">
+                                        placeholder="Enter email" required>
                             </div>
                             <input type="button" onclick="close_modal()" class="btn btn-secondary " value="close"/>
-                            <input type="submit" class="btn btn-dark" value="Submit"/>
+                            <input type="submit"  class="btn btn-dark" value="Submit"/>
                         </form>
 
                     </div>
