Fixed bugsgit add .

--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -5,7 +5,11 @@
 
 <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
      xmlns="http://www.w3.org/1999/html">
-
+     <div id="showResponseArea_curr_jobs" class="alert" style="color:green" hidden>
+        <span>
+            <strong>Success !</strong>You should receive an email shortly with your current jobs.
+        </span>
+    </div>
     <h1>Microsatellite Finder</h1>
 
     <p class="container font-weight-light "> Microsatellites (also known as Simple Sequence Repeats (SSRs)) are
