--- a/microsat-finder/application/templates/upload-FASTA-file.html
+++ b/microsat-finder/application/templates/upload-FASTA-file.html
@@ -15,7 +15,13 @@
     </div>
 </nav>
 
+    <div id="showResponseArea" class="alert" style="color:green" hidden>
+        <span>
+            <strong>Success ! </strong>Your job has been uploaded successfully!!!
+        </span>
+    </div>
 <div class="container py-4">
+
     <h5>Upload FASTA File</h5>
     <p class="font-weight-light "> Upload a FASTA file, the file formats that are accepted are .fa and .fast files.
         Email description,
