--- a/microsat-finder/application/templates/base.html
+++ b/microsat-finder/application/templates/base.html
@@ -1,25 +1,25 @@
+<!-- Base that all the html pages inherit from-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 
+    <!-- Bootstrap link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 </head>
+
 <body>
-
-
+<!-- Content tags for other html templates -->
 {% block content %}
 {% endblock %}
 
+<!-- Scripts used in the html docs -->
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/scripts.js"></script>
-
-
-
 </body>
+
 </html>
