--- a/microsat-finder/application/templates/upload-FASTA-file.html
+++ b/microsat-finder/application/templates/upload-FASTA-file.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 {% block title %} Upload FASTA file {% endblock %}
-
 {% block content %}
+
+<!-- Navigation bar to home page and docs-->
 <nav class="navbar-expand-lg navbar-dark" style="background-color: black">
-
-
     <div class="collapse navbar-collapse font-weight-light" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item active nav-link " href="/">Home <span class="sr-only"></span></a>
             <a class="nav-item  active nav-link" href="https://github.com/raeKhan225/Finding-Repetition-in-Genomes">View
                 Documentation</a>
-
         </div>
     </div>
 </nav>
 
-    <div id="showResponseArea" class="alert" style="color:green" hidden>
-        <span>
-            <strong>Success ! </strong>Your job has been uploaded successfully!!!
-        </span>
-    </div>
-<div class="container py-4">
+<!-- For success message once form info in uploaded to db-->
+<div id="showResponseArea" class="alert" style="color:green" hidden>
+    <span>
+        <strong>Success!</strong> Your job has been uploaded successfully!
+    </span>
+</div>
 
+
+<div class="container py-4">
     <h5>Upload FASTA File</h5>
     <p class="font-weight-light "> Upload a FASTA file, the file formats that are accepted are .fa and .fast files.
         Email description,
@@ -32,6 +32,7 @@
         Graph choice description
     </p>
 
+    <!-- Form with all details needed for the analysis for uploading a job, the js has a listener for the submit-->
     <form  name="upload_confirm_form" id="upload_confirm_form"class="font-weight-light " enctype="multipart/form-data">
 
         <div class="form-group">
@@ -49,15 +50,15 @@
             <label for="minKmerLength">Min K-mer Length</label>
             <select id="minKmerLength" class="form-control" name="minKmerLength" required>
                 <option selected value="">Select size</option>
-                <option 2>2</option>
+                <option>2</option>
                 <option>3</option>
                 <option>4</option>
                 <option>5</option>
                 <option>6</option>
             </select>
         </div>
-        <div class="form-group">
 
+        <div class="form-group">
             <label for="maxKmerLength">Max K-mer Length</label>
             <select id="maxKmerLength" class="form-control" name="maxKmerLength" required>
                 <option selected value="">Select size</option>
@@ -68,8 +69,8 @@
                 <option>6</option>
             </select>
         </div>
-        <div class="form-group">
 
+        <div class="form-group">
             <label for="minMicrosatLength">Min Microsat Length</label>
             <select id="minMicrosatLength" class="form-control" name="minMicrosatLength" required>
                 <option selected value="">Select size</option>
@@ -80,30 +81,15 @@
                 <option>7</option>
             </select>
         </div>
-        <div class="form-group">
 
-            <label for="graphType">Graph choice</label>
-            <select id="graphType" class="form-control" name="graphType" required>
-                <option selected value="">Select graph</option>
-                <option>None</option>
-                <option>Bar graph</option>
-                <option>Scatter graph</option>
-                <option>X graph</option>
-            </select>
-        </div>
         <div class="form-group">
             <label for="fastaFile">Upload FASTA file</label>
             <input type="file" class=" font-weight-light" id="fastaFile" name="fastaFile" required>
         </div>
 
-        <p class="error error--hidden">
-
-
         <input type="submit" value="Submit" class="btn btn-secondary btn-lg btn-block font-weight-light"
                 style="background-color: black" >
-
     </form>
-
 
 </div>
 {% endblock %}
