Housekeeping, cleaning code and commenting

--- a/microsat-finder/application/templates/upload-FASTA-file.html
+++ b/microsat-finder/application/templates/upload-FASTA-file.html
@@ -14,12 +14,9 @@
 </nav>
 
 <!-- For success message once form info in uploaded to db-->
-<div id="showResponseArea" class="alert" style="color:green" hidden>
-    <span>
-        <strong>Success!</strong> Your job has been uploaded successfully!
-    </span>
+<div id="showResponseArea" class="text-left alert" style="color:green" hidden>
+    <strong>Success!</strong> Your job has been uploaded successfully!
 </div>
-
 
 <div class="container py-4">
     <h5>Upload FASTA File</h5>
