--- a/microsat-finder/application/templates/upload-FASTA-file.html
+++ b/microsat-finder/application/templates/upload-FASTA-file.html
@@ -79,6 +79,11 @@
             </select>
         </div>
 
+        <div>
+            <label for="percMismatch">Select percentage mismatch</label>
+            <input type="number" id="percMismatch" name="percMismatch" min="0" max="60" step="0.5" value="0">
+        </div>
+
         <div class="form-group">
             <label for="fastaFile">Upload FASTA file</label>
             <input type="file" class=" font-weight-light" id="fastaFile" name="fastaFile" required>
