Offline version fixes

--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -87,14 +87,14 @@
         <!-- Values NEED TO CHANGE-->
         <div class="row">
             <div class="col-sm">
-                <a href="https://github.com/raeKhan225/Finding-Repetition-in-Genomes">
+                <a href="/download">
                     Finding-Repetition-in-Genomes </a>
             </div>
             <div class="col-sm text-right">
-                1MB
+                6.8MB
             </div>
             <div class="col-sm text-right">
-                10 April 2023
+                29 April 2023
             </div>
         </div>
     </div>
