--- a/microsat-finder/application/templates/home.html
+++ b/microsat-finder/application/templates/home.html
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <!-- Values NEED TO CHANGE-->
+        <!-- Values -->
         <div class="row">
             <div class="col-sm">
                 <a href="/download">
